kubernetes/main/apps/media/recyclarr/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: recyclarr
  namespace: media
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: recyclarr
  ingress:
    # same-node ClusterIP replies miss CT reverse-xlate (socketLB
    # hostNamespaceOnly + endpointRoutes) and hit ingress policy
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: media
            app.kubernetes.io/name: sonarr
        - matchLabels:
            io.kubernetes.pod.namespace: media
            app.kubernetes.io/name: radarr
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: media
            app.kubernetes.io/name: sonarr
      toPorts:
        - ports:
            - port: "8989"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: media
            app.kubernetes.io/name: radarr
      toPorts:
        - ports:
            - port: "7878"
              protocol: TCP
    # trash-guides
    - toEntities: ["world"]
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
